fastmetrics-derive/tests/ui/fail/label_set/non_named_struct.stderr
error: #[derive(LabelSet)] can only be derived for structs with named fields.
 --> tests/ui/fail/label_set/non_named_struct.rs:5:8
  |
5 | struct TupleStruct(u64);
  |        ^^^^^^^^^^^
